# typed-env

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/play/: Cargo.toml
examples/play/src/: main.rs
src/: core.rs  error.rs  error_reason.rs  lib.rs  list_envar.rs  special_constants.rs  tests.rs
